k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ggr-vacations
  labels:
    app.kubernetes.io/name: ggr-vacations
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ggr-vacations
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
