k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-vacations
  labels:
    app.kubernetes.io/name: ggr-vacations
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ggr-vacations.k3s.lpb.ovh
      secretName: ggr-vacations-tls
  rules:
    - host: ggr-vacations.k3s.lpb.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggr-vacations
                port:
                  number: 8080
