k8s/redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  labels:
    app.kubernetes.io/name: ggr-vacations
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-vacations-http
  labels:
    app.kubernetes.io/name: ggr-vacations
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ggr-vacations-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ggr-vacations.k3s.lpb.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggr-vacations
                port:
                  number: 8080
